TensorizedTrainingMethods/ApplyingCNN/CIFAR/ErrOut/Error_conv500Tucker2ATCD4DCIFAR10.err
Traceback (most recent call last):
  File "conv500Tucker2ATCD4DCIFAR10.py", line 52, in <module>
    running_loss = train_net_Tucker2_ATDC(losses, net, "net", trainloader, criterion, optimizer, convName, utc_convs, alpha, 1, 1, lName)
  File "/zhome/ab/6/109248/Desktop/Speciale/Speciale/TensorizedTrainingMethods/ApplyingCNN/CIFAR/PackagesAndModels/train_val_test_CIFAR10.py", line 42, in train_net_Tucker2_ATDC
    eval('net.'+name+'.weight.data[:] = torch.sub(net.'+name+'.weight.data,net.'+name+'.weight.grad, alpha = alpha)')
  File "<string>", line 1
    net.l_1.weight.data[:] = torch.sub(net.l_1.weight.data,net.l_1.weight.grad, alpha = alpha)
                           ^
SyntaxError: invalid syntax
Loaded module: cuda/10.2
Loaded dependency [gcc/8.4.0]: binutils/2.34
Loaded dependency [python3/3.8.2]: gcc/8.4.0
Loaded module: python3/3.8.2
Traceback (most recent call last):
  File "conv500Tucker2ATCD4DCIFAR10.py", line 52, in <module>
    running_loss = train_net_Tucker2_ATDC(losses, net, "net", trainloader, criterion, optimizer, convName, utc_convs, alpha, 1, 1, lName)
  File "/zhome/ab/6/109248/Desktop/Speciale/Speciale/TensorizedTrainingMethods/ApplyingCNN/CIFAR/PackagesAndModels/train_val_test_CIFAR10.py", line 42, in train_net_Tucker2_ATDC
    eval('net.'+name+'.weight.data[:] = torch.sub(net.'+name+'.weight.data,net.'+name+'.weight.grad, alpha = alpha)')
  File "<string>", line 1
    net.l_1.weight.data[:] = torch.sub(net.l_1.weight.data,net.l_1.weight.grad, alpha = alpha)
                           ^
SyntaxError: invalid syntax
Loaded module: cuda/10.2
Loaded dependency [gcc/8.4.0]: binutils/2.34
Loaded dependency [python3/3.8.2]: gcc/8.4.0
Loaded module: python3/3.8.2
Loaded module: cuda/10.2
Loaded dependency [gcc/8.4.0]: binutils/2.34
Loaded dependency [python3/3.8.2]: gcc/8.4.0
Loaded module: python3/3.8.2
Loaded module: cuda/10.2
Loaded dependency [gcc/8.4.0]: binutils/2.34
Loaded dependency [python3/3.8.2]: gcc/8.4.0
Loaded module: python3/3.8.2
Traceback (most recent call last):
  File "conv500Tucker2ATCD4DCIFAR10.py", line 13, in <module>
    from PackagesAndModels.pack import *
  File "/zhome/ab/6/109248/Desktop/Speciale/Speciale/TensorizedTrainingMethods/ApplyingCNN/CIFAR/PackagesAndModels/pack.py", line 17, in <module>
    from sklearn.decomposition import FactorAnalysis, PCA
  File "/zhome/ab/6/109248/.local/lib/python3.8/site-packages/sklearn/decomposition/__init__.py", line 12, in <module>
    from ._sparse_pca import SparsePCA, MiniBatchSparsePCA
  File "/zhome/ab/6/109248/.local/lib/python3.8/site-packages/sklearn/decomposition/_sparse_pca.py", line 10, in <module>
    from ..linear_model import ridge_regression
  File "/zhome/ab/6/109248/.local/lib/python3.8/site-packages/sklearn/linear_model/__init__.py", line 22, in <module>
    from ._ridge import (Ridge, RidgeCV, RidgeClassifier, RidgeClassifierCV,
  File "/zhome/ab/6/109248/.local/lib/python3.8/site-packages/sklearn/linear_model/_ridge.py", line 21, in <module>
    from ._sag import sag_solver
  File "/zhome/ab/6/109248/.local/lib/python3.8/site-packages/sklearn/linear_model/_sag.py", line 12, in <module>
    from ._sag_fast import sag32, sag64
  File "<frozen importlib._bootstrap>", line 389, in parent
KeyboardInterrupt
